cambiar funcion list.of por arrays.asList para soporte en java 8